# pvpccheap4

./: .env.example  .gitignore  ARCHITECTURE.md  Caddyfile  compose.prod.yaml  compose.yaml  docker-compose.prod.yml  docker-compose.yml
android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/androidTest/java/com/crashbit/pvpccheap4/: ExampleInstrumentedTest.kt
android_app/app/src/androidTest/java/com/crashbit/pvpvvheap4/: ExampleInstrumentedTest.kt
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/crashbit/pvpccheap4/: MainActivity.kt  PvpcCheapApp.kt
android_app/app/src/main/java/com/crashbit/pvpccheap4/data/api/: ApiService.kt  AuthInterceptor.kt
android_app/app/src/main/java/com/crashbit/pvpccheap4/data/local/: TokenManager.kt
android_app/app/src/main/java/com/crashbit/pvpccheap4/data/model/: Models.kt
android_app/app/src/main/java/com/crashbit/pvpccheap4/data/repository/: AuthRepository.kt  DeviceRepository.kt  PriceRepository.kt
android_app/app/src/main/java/com/crashbit/pvpccheap4/di/: NetworkModule.kt
android_app/app/src/main/java/com/crashbit/pvpccheap4/ui/navigation/: Navigation.kt
android_app/app/src/main/java/com/crashbit/pvpccheap4/ui/screens/auth/: AuthViewModel.kt  LoginScreen.kt  RegisterScreen.kt
android_app/app/src/main/java/com/crashbit/pvpccheap4/ui/screens/dashboard/: DashboardScreen.kt  DashboardViewModel.kt
android_app/app/src/main/java/com/crashbit/pvpccheap4/ui/screens/devices/: AddIntegrationScreen.kt  DevicesScreen.kt  DevicesViewModel.kt
android_app/app/src/main/java/com/crashbit/pvpccheap4/ui/screens/main/: MainScreen.kt
android_app/app/src/main/java/com/crashbit/pvpccheap4/ui/screens/prices/: PricesScreen.kt  PricesViewModel.kt
android_app/app/src/main/java/com/crashbit/pvpccheap4/ui/theme/: Color.kt  Theme.kt  Type.kt
android_app/app/src/main/java/com/crashbit/pvpvvheap4/: MainActivity.kt  PvpcCheapApp.kt
android_app/app/src/main/java/com/crashbit/pvpvvheap4/data/api/: ApiService.kt  AuthInterceptor.kt
android_app/app/src/main/java/com/crashbit/pvpvvheap4/data/local/: TokenManager.kt
android_app/app/src/main/java/com/crashbit/pvpvvheap4/data/model/: Models.kt
android_app/app/src/main/java/com/crashbit/pvpvvheap4/data/repository/: AuthRepository.kt  DeviceRepository.kt  PriceRepository.kt
android_app/app/src/main/java/com/crashbit/pvpvvheap4/di/: NetworkModule.kt
android_app/app/src/main/java/com/crashbit/pvpvvheap4/ui/navigation/: Navigation.kt
android_app/app/src/main/java/com/crashbit/pvpvvheap4/ui/theme/: Color.kt  Theme.kt  Type.kt
android_app/app/src/main/res/values/: strings.xml  themes.xml
android_app/app/src/test/java/com/crashbit/pvpccheap4/: ExampleUnitTest.kt
android_app/app/src/test/java/com/crashbit/pvpvvheap4/: ExampleUnitTest.kt
android_app/gradle/: libs.versions.toml
android_app/gradle/wrapper/: gradle-wrapper.properties
backend/: Cargo.toml  Dockerfile
backend/migrations/20240101000000_create_initial_tables/: down.sql  up.sql
backend/migrations/20240102000000_add_automation_rules/: down.sql  up.sql
backend/migrations/20240103000000_add_device_state/: down.sql  up.sql
backend/migrations/2026-01-18-120000_add_scheduled_executions/: down.sql  up.sql
backend/src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
backend/src/api/: auth.rs  automation.rs  devices.rs  integrations.rs  mod.rs  prices.rs  rules.rs  schedules.rs
backend/src/integrations/: meross.rs  meross_mqtt.rs  mod.rs  mqtt.rs
backend/src/routes/: mod.rs  prices.rs  schedules.rs
backend/src/services/: auth.rs  automation_engine.rs  ha_client.rs  mod.rs  price_fetcher.rs  schedule_computation.rs  scheduler.rs
(+9 files in other folders)
