[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "cron_runner"
path = "src/bin/cron_runner.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
async-trait = "0.1"
diesel = { version = "2.1.0", features = [
    "postgres",
    "chrono",
    "r2d2",
    "serde_json",
] }
diesel_migrations = "2.1.0" # Auto-run migrations
dotenvy = "0.15"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Auth & Crypto
argon2 = "0.5"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
hex = "0.4"
md5 = "0.8.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11.8"
# MQTT for smart home device control
rumqttc = "0.25.1"
rand = "0.9.2"

[dev-dependencies]
actix-rt = "2.11.0"
