[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "cron_runner"
path = "src/bin/cron_runner.rs"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.1"
async-trait = "0.1.89"
diesel = { version = "2.3.6", features = [
    "postgres",
    "chrono",
    "r2d2",
    "serde_json",
] }
diesel_migrations = "2.3.1" # Auto-run migrations
dotenvy = "0.15.7"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
# Auth & Crypto
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
hex = "0.4.3"
md5 = "0.8.0"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
log = "0.4.29"
env_logger = "0.11.8"
# MQTT for smart home device control (websocket for Meross which uses MQTT over WSS on port 443)
rumqttc = { version = "0.25.1", features = ["use-rustls", "websocket", "url"] }
tokio-rustls = "0.26.4"
rustls-native-certs = "0.8.3"
urlencoding = "2.1.3"
rand = "0.9.2"
tokio-cron-scheduler = "0.15.1"
chrono-tz = "0.10.4"

[dev-dependencies]
actix-rt = "2.11.0"
